refactor: update name to gfed-medusa-backend

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gfed-mds-backend",
+  "name": "gfed-medusa-backend",
   "private": true,
   "scripts": {
     "build": "turbo run build",
