--- a/render.yaml
+++ b/render.yaml
@@ -30,3 +30,20 @@ projects:
               - source: 0.0.0.0/0
                 description: everywhere
             postgresMajorVersion: '18'
+
+      - name: qa
+        services:
+          - type: web
+            runtime: image
+            plan: free
+            name: gfed-medusa-backend-qa
+            region: singapore
+            autoDeployTrigger: off
+            image:
+              url: traefik/whoami:v1.11
+            envVars:
+              - fromGroup: backend-env-group-qa
+              - key: DATABASE_URL
+                fromDatabase:
+                  name: gfed-medusa-database
+                  property: connectionString
