--- a/render.yaml
+++ b/render.yaml
@@ -8,47 +8,13 @@ projects:
           - type: web
             name: gfed-medusa-backend
             runtime: docker
-            repo: https://github.com/goodfrontend/gfed-medusa-backend
             plan: free
             envVars:
-              - key: VITE_MEDUSA_BACKEND_URL
-                sync: false
-              - key: STORE_CORS
-                sync: false
-              - key: SHOPIFY_BASE_URL
-                sync: false
-              - key: POSTGRES_URL
-                fromDatabase:
-                  name: gfed-medusa-database
-                  property: connectionString
-              - key: PORT
-                sync: false
-              - key: MEDUSA_WORKER_MODE
-                sync: false
-              - key: MEDUSA_BACKEND_URL
-                sync: false
-              - key: ALGOLIA_PRODUCT_INDEX_NAME
-                sync: false
-              - key: COOKIE_SECRET
-                sync: false
-              - key: AUTH_CORS
-                sync: false
-              - key: ALGOLIA_APP_ID
-                sync: false
-              - key: ADMIN_CORS
-                sync: false
-              - key: JWT_SECRET
-                sync: false
-              - key: DISABLE_MEDUSA_ADMIN
-                sync: false
-              - key: DB_NAME
-                sync: false
+              - fromGroup: backend-env-group-prod
               - key: DATABASE_URL
                 fromDatabase:
                   name: gfed-medusa-database
                   property: connectionString
-              - key: ALGOLIA_API_KEY
-                sync: false
             region: singapore
             dockerContext: .
             dockerfilePath: apps/medusa/Dockerfile
