--- a/render.yaml
+++ b/render.yaml
@@ -3,29 +3,8 @@ version: '1'
 projects:
   - name: GFED Medusa Backend and DB
     environments:
-      - name: Production
-        services:
-          - type: web
-            name: gfed-medusa-backend
-            runtime: docker
-            plan: free
-            envVars:
-              - fromGroup: backend-env-group-prod
-              - key: DATABASE_URL
-                fromDatabase:
-                  name: gfed-medusa-database
-                  property: connectionString
-            region: singapore
-            dockerContext: .
-            dockerfilePath: apps/medusa/Dockerfile
-            autoDeployTrigger: 'off'
-        databases:
-          - name: gfed-medusa-database
-            databaseName: gfed_medusa_database
-            user: gfed_medusa_database_user
-            plan: free
-            region: singapore
-            ipAllowList:
-              - source: 0.0.0.0/0
-                description: everywhere
-            postgresMajorVersion: '18'
+      - name: production
+
+      - name: qa
+
+      - name: smoke
