--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,29 @@
-# Exported from Render on 2026-01-05T12:28:24Z
-version: '1'
 projects:
   - name: GFED Medusa Backend and DB
     environments:
       - name: production
-
-      - name: qa
+        services:
+          - type: web
+            runtime: image
+            plan: free
+            name: gfed-medusa-backend-prod
+            region: singapore
+            autoDeployTrigger: off
+            image:
+              url: traefik/whoami:v1.11
+            envVars:
+              - fromGroup: backend-env-group-prod
+              - key: DATABASE_URL
+                fromDatabase:
+                  name: gfed-medusa-database
+                  property: connectionString
+        databases:
+          - name: gfed-medusa-database
+            databaseName: gfed_medusa_database
+            user: gfed_medusa_database_user
+            plan: free
+            region: singapore
+            ipAllowList:
+              - source: 0.0.0.0/0
+                description: everywhere
+            postgresMajorVersion: '18'
