--- a/render.yaml
+++ b/render.yaml
@@ -13,17 +13,15 @@ projects:
               url: traefik/whoami:v1.11
             envVars:
               - fromGroup: backend-env-group-prod
-              - key: DATABASE_URL
-                fromDatabase:
-                  name: gfed-medusa-database
-                  property: connectionString
-        databases:
-          - name: gfed-medusa-database
-            databaseName: gfed_medusa_database
-            user: gfed_medusa_database_user
+      - name: qa
+        services:
+          - type: web
+            runtime: image
             plan: free
+            name: gfed-medusa-backend-qa
             region: singapore
-            ipAllowList:
-              - source: 0.0.0.0/0
-                description: everywhere
-            postgresMajorVersion: '18'
+            autoDeployTrigger: off
+            image:
+              url: traefik/whoami:v1.11
+            envVars:
+              - fromGroup: backend-env-group-qa
