--- a/.github/workflows/_deploy-render.yml
+++ b/.github/workflows/_deploy-render.yml
@@ -31,32 +31,81 @@ jobs:
           SERVICE_NAME: ${{ inputs.service_name }}
           IMAGE: ${{ inputs.image }}
         run: |
-          set -euo pipefail
+          service_data=$(
+              curl -s "https://api.render.com/v1/services?name=$SERVICE_NAME&limit=1" \
+                  -H "Authorization: Bearer $RENDER_API_KEY" \
+                  -H "Accept: application/json" \
+              | jq -r '.[0].service'
+          )
 
-          if [ -z "${RENDER_API_KEY:-}" ]; then
-            echo "RENDER_API_KEY is missing." >&2
-            exit 1
+          service_id=$(echo "$service_data" | jq -r '.id // empty')
+          service_owner_id=$(echo "$service_data" | jq -r '.ownerId // empty')
+
+          if [ -z "$service_id" ]; then
+              echo "::error::Service not found: $SERVICE_NAME"
+              exit 1
           fi
-          if [ -z "${SERVICE_NAME:-}" ]; then
-            echo "SERVICE_NAME (Render service name) is missing." >&2
-            exit 1
+
+          updated=$(
+              curl -s -X PATCH "https://api.render.com/v1/services/$service_id" \
+                  -H "Authorization: Bearer $RENDER_API_KEY" \
+                  -H "Accept: application/json" \
+                  -H "Content-Type: application/json" \
+                  -d "{
+                          \"image\": {
+                              \"ownerId\": \"$service_owner_id\",
+                              \"imagePath\": \"$IMAGE\"
+                          }
+                      }" \
+              | jq -r '.imagePath // empty'
+          )
+
+          if [ "$updated" != "$IMAGE" ]; then
+              echo "::error::Failed to update service"
+              exit 1
           fi
-          if [ -z "${IMAGE:-}" ]; then
-            echo "IMAGE (container image tag) is missing." >&2
-            exit 1
+
+          dep_id=$(
+              curl -s -X POST "https://api.render.com/v1/services/$service_id/deploys" \
+                  -H "Authorization: Bearer $RENDER_API_KEY" \
+                  -H "Content-Type: application/json" \
+                  -d "{ \"imageUrl\": \"$IMAGE\" }" \
+              | jq -r '.id // empty'
+          )
+
+          if [ -z "$dep_id" ]; then
+              echo "::error::Deployment was not triggered"
+              exit 1
           fi
 
-          payload=$(printf '{"serviceDetails":{"image":{"url":"%s"}}}' "$IMAGE")
-          base_url="https://api.render.com/v1/services/${SERVICE_NAME}"
+          max_attempts=30
+          sleep_seconds=30
+          attempts=1
 
-          echo "Updating Render service ${SERVICE_NAME} to image ${IMAGE}."
-          curl -fsS -X PATCH \
-            -H "Authorization: Bearer ${RENDER_API_KEY}" \
-            -H "Content-Type: application/json" \
-            -d "$payload" \
-            "${base_url}"
+          while [ "$attempts" -le "$max_attempts" ]; do
+              status=$(curl -s "https://api.render.com/v1/services/$service_id/deploys/$dep_id" \
+              -H "Authorization: Bearer $RENDER_API_KEY" \
+              -H "Accept: application/json" \
+              | jq -r '.status // empty')
 
-          echo "Triggering deploy for service ${SERVICE_NAME}."
-          curl -fsS -X POST \
-            -H "Authorization: Bearer ${RENDER_API_KEY}" \
-            "${base_url}/deploys"
+              echo "Attempt $attempts/$max_attempts: Status is '$status'"
+
+              # created queued build_in_progress update_in_progress live deactivated build_failed
+              # update_failed canceled pre_deploy_in_progress pre_deploy_failed
+              case "$status" in
+                  "live")
+                      echo "Deployment is live"
+                      exit 0
+                      ;;
+                  "build_failed"|"update_failed"|"canceled"|"pre_deploy_failed")
+                      echo "Deployment failed: $status"
+                      exit 1
+                      ;;
+              esac
+
+              attempts=$((attempts + 1))
+              sleep "$sleep_seconds"
+          done
+
+          echo "::error::Deployment timed out"
+          exit 1
