--- a/.github/workflows/_deploy-render.yml
+++ b/.github/workflows/_deploy-render.yml
@@ -31,6 +31,8 @@ jobs:
           SERVICE_NAME: ${{ inputs.service_name }}
           IMAGE: ${{ inputs.image }}
         run: |
+          set -euo pipefail
+
           service_data=$(
               curl -s "https://api.render.com/v1/services?name=$SERVICE_NAME&limit=1" \
                   -H "Authorization: Bearer $RENDER_API_KEY" \
@@ -46,8 +48,8 @@ jobs:
               exit 1
           fi
 
-          updated=$(
-              curl -s -X PATCH "https://api.render.com/v1/services/$service_id" \
+          update_resp=$(
+              curl -s -w "\n%{http_code}" -X PATCH "https://api.render.com/v1/services/$service_id" \
                   -H "Authorization: Bearer $RENDER_API_KEY" \
                   -H "Accept: application/json" \
                   -H "Content-Type: application/json" \
@@ -57,24 +59,41 @@ jobs:
                               \"imagePath\": \"$IMAGE\"
                           }
                       }" \
-              | jq -r '.imagePath // empty'
           )
 
-          if [ "$updated" != "$IMAGE" ]; then
-              echo "::error::Failed to update service"
+          update_body=$(echo "$update_resp" | head -n -1)
+          update_status=$(echo "$update_resp" | tail -n 1)
+
+          if [ "$update_status" -ge 300 ]; then
+              echo "::error::Service update failed ($update_status): $update_body"
               exit 1
           fi
 
-          dep_id=$(
-              curl -s -X POST "https://api.render.com/v1/services/$service_id/deploys" \
+          updated=$(echo "$update_body" | jq -r '.imagePath // empty')
+
+          if [ "$updated" != "$IMAGE" ]; then
+              echo "::error::Failed to update service; expected imagePath $IMAGE but got $updated"
+              exit 1
+          fi
+
+          deploy_resp=$(
+              curl -s -w "\n%{http_code}" -X POST "https://api.render.com/v1/services/$service_id/deploys" \
                   -H "Authorization: Bearer $RENDER_API_KEY" \
                   -H "Content-Type: application/json" \
-                  -d "{ \"imageUrl\": \"$IMAGE\" }" \
-              | jq -r '.id // empty'
           )
 
+          deploy_body=$(echo "$deploy_resp" | head -n -1)
+          deploy_status=$(echo "$deploy_resp" | tail -n 1)
+
+          if [ "$deploy_status" -ge 300 ]; then
+              echo "::error::Failed to trigger deploy ($deploy_status): $deploy_body"
+              exit 1
+          fi
+
+          dep_id=$(echo "$deploy_body" | jq -r '.id // empty')
+
           if [ -z "$dep_id" ]; then
-              echo "::error::Deployment was not triggered"
+              echo "::error::Deployment was not triggered; response: $deploy_body"
               exit 1
           fi
 
