--- a/.github/workflows/_build-docker.yml
+++ b/.github/workflows/_build-docker.yml
@@ -8,6 +8,9 @@ on:
       dockerfile:
         required: true
         type: string
+    secrets:
+      database_url:
+        required: true
     outputs:
       image_tag:
         value: ghcr.io/${{ github.repository }}/${{ inputs.app }}:${{ github.sha }}
@@ -15,9 +18,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.database_url }}
     permissions:
       contents: read
       packages: write
+    services:
+      postgres:
+        image: postgres:18
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_DB: medusa
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -27,11 +46,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Wait for Postgres
+        run: |
+          for i in {1..30}; do
+            if nc -z 127.0.0.1 5432; then
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "Postgres did not become ready in time" >&2
+          exit 1
+
       - uses: docker/build-push-action@v5
         with:
           context: .
           file: ${{ inputs.dockerfile }}
           push: true
           tags: ghcr.io/${{ github.repository }}/${{ inputs.app }}:${{ github.sha }}
+          build-args: |
+            DATABASE_URL=${{ env.DATABASE_URL }}
+          network: host
           cache-from: type=gha
           cache-to: type=gha,mode=max
