--- a/.github/workflows/deploy-medusa.yml
+++ b/.github/workflows/deploy-medusa.yml
@@ -26,6 +26,7 @@ jobs:
       dockerfile: ./apps/medusa/Dockerfile
     secrets:
       database_url: ${{ secrets.DATABASE_URL }}
+      database_ssl: ${{ secrets.DATABASE_SSL || 'false' }}
 
   deploy-qa:
     name: Deploy to QA
