--- a/.github/workflows/_build-docker.yml
+++ b/.github/workflows/_build-docker.yml
@@ -11,6 +11,8 @@ on:
     secrets:
       database_url:
         required: true
+      database_ssl:
+        required: false
     outputs:
       image_tag:
         value: ghcr.io/${{ github.repository }}/${{ inputs.app }}:${{ github.sha }}
@@ -20,23 +22,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: ${{ secrets.database_url }}
+      DATABASE_SSL: ${{ secrets.database_ssl || 'false' }}
     permissions:
       contents: read
       packages: write
-    services:
-      postgres:
-        image: postgres:18
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_DB: medusa
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -46,17 +35,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Wait for Postgres
-        run: |
-          for i in {1..30}; do
-            if nc -z 127.0.0.1 5432; then
-              exit 0
-            fi
-            sleep 2
-          done
-          echo "Postgres did not become ready in time" >&2
-          exit 1
-
       - uses: docker/build-push-action@v5
         with:
           context: .
@@ -65,6 +43,7 @@ jobs:
           tags: ghcr.io/${{ github.repository }}/${{ inputs.app }}:${{ github.sha }}
           build-args: |
             DATABASE_URL=${{ env.DATABASE_URL }}
+            DATABASE_SSL=${{ env.DATABASE_SSL }}
           network: host
           cache-from: type=gha
           cache-to: type=gha,mode=max
