add DATABASE_SSL in Dockerfile

--- a/apps/medusa/Dockerfile
+++ b/apps/medusa/Dockerfile
@@ -30,7 +30,9 @@ FROM deps AS builder
 
 ENV CI=true
 ARG DATABASE_URL
+ARG DATABASE_SSL
 ENV DATABASE_URL=${DATABASE_URL}
+ENV DATABASE_SSL=${DATABASE_SSL}
 
 COPY . .
 
