--- a/render.yaml
+++ b/render.yaml
@@ -25,3 +25,13 @@ projects:
               url: ghcr.io/elloani-gfed/gfed-medusa-backend-copy/medusa:latest
             envVars:
               - fromGroup: backend-env-group-qa
+          - type: web
+            runtime: docker
+            plan: free
+            name: gfed-medusa-backend-qa-docker
+            region: singapore
+            autoDeployTrigger: 'off'
+            dockerContext: .
+            dockerfilePath: apps/medusa/Dockerfile
+            envVars:
+              - fromGroup: backend-env-group-qa
