--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ projects:
             region: singapore
             autoDeployTrigger: off
             image:
-              url: ghcr.io/elloani-gfed/gfed-medusa-backend-copy/medusa:latest
+              url: ghcr.io/elloani-gfed/gfed-medusa-backend-copy/medusa:3a26ede91980bed6aec36be89979313ad1583dea
             envVars:
               - fromGroup: backend-env-group-prod
       - name: qa
@@ -22,7 +22,7 @@ projects:
             region: singapore
             autoDeployTrigger: off
             image:
-              url: ghcr.io/elloani-gfed/gfed-medusa-backend-copy/medusa:latest
+              url: ghcr.io/elloani-gfed/gfed-medusa-backend-copy/medusa:3a26ede91980bed6aec36be89979313ad1583dea
             envVars:
               - fromGroup: backend-env-group-qa
           - type: web
