--- a/.github/workflows/ci-medusa.yml
+++ b/.github/workflows/ci-medusa.yml
@@ -50,3 +50,32 @@ jobs:
 
       - name: Build medusa app
         run: pnpm --filter medusa build
+
+  build-preview-image:
+    name: Build preview image
+    if: github.event.pull_request.head.repo.full_name == github.repository
+    needs: validate
+    uses: ./.github/workflows/_build-docker.yml
+    permissions:
+      contents: read
+      packages: write
+    with:
+      app: medusa
+      dockerfile: ./apps/medusa/Dockerfile
+
+  render-preview:
+    name: Render image preview
+    if: github.event.pull_request.head.repo.full_name == github.repository
+    needs: build-preview-image
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Create Render service preview
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/preview
+          method: POST
+          bearerToken: ${{ secrets.RENDER_API_KEY }}
+          contentType: application/json
+          data: '{"imagePath":"${{ needs.build-preview-image.outputs.image_tag }}"}'
