--- a/.github/workflows/ci-medusa.yml
+++ b/.github/workflows/ci-medusa.yml
@@ -73,10 +73,28 @@ jobs:
       contents: read
     steps:
       - name: Create Render service preview
-        uses: fjogeleit/http-request-action@v1
-        with:
-          url: https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/preview
-          method: POST
-          bearerToken: ${{ secrets.RENDER_API_KEY }}
-          contentType: application/json
-          data: '{"imagePath":"${{ needs.build-preview-image.outputs.image_tag }}"}'
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+          IMAGE_TAG: ${{ needs.build-preview-image.outputs.image_tag }}
+        run: |
+          set -euo pipefail
+
+          payload=$(jq -n --arg imagePath "$IMAGE_TAG" '{imagePath: $imagePath}')
+          response=$(
+            curl -s -w "\n%{http_code}" -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/preview" \
+              -H "Authorization: Bearer $RENDER_API_KEY" \
+              -H "Content-Type: application/json" \
+              -d "$payload" \
+              --max-time 60 \
+              --retry 3 \
+              --retry-delay 5
+          )
+
+          body=$(echo "$response" | head -n -1)
+          status=$(echo "$response" | tail -n 1)
+
+          if [ "$status" -ge 300 ]; then
+            echo "::error::Render preview failed ($status): $body"
+            exit 1
+          fi
