--- a/.github/workflows/ci-medusa.yml
+++ b/.github/workflows/ci-medusa.yml
@@ -81,7 +81,7 @@ jobs:
           set -euo pipefail
 
           payload=$(jq -n --arg imagePath "$IMAGE_TAG" '{imagePath: $imagePath}')
-          response=$(
+          create_resp=$(
             curl -s -w "\n%{http_code}" -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/preview" \
               -H "Authorization: Bearer $RENDER_API_KEY" \
               -H "Content-Type: application/json" \
@@ -91,10 +91,96 @@ jobs:
               --retry-delay 5
           )
 
-          body=$(echo "$response" | head -n -1)
-          status=$(echo "$response" | tail -n 1)
+          create_body=$(echo "$create_resp" | head -n -1)
+          create_status=$(echo "$create_resp" | tail -n 1)
 
-          if [ "$status" -ge 300 ]; then
-            echo "::error::Render preview failed ($status): $body"
+          if [ "$create_status" -ge 300 ]; then
+            echo "::error::Render preview failed ($create_status): $create_body"
             exit 1
           fi
+
+          preview_id=$(echo "$create_body" | jq -r '.id // .preview.id // empty')
+          preview_url=$(echo "$create_body" | jq -r '.url // .preview.url // .previewUrl // .service.previewUrl // empty')
+
+          if [ -z "$preview_id" ]; then
+            echo "::warning::Preview id missing from response; falling back to service preview endpoint."
+          fi
+
+          max_attempts=30
+          sleep_seconds=30
+          attempts=1
+
+          while [ "$attempts" -le "$max_attempts" ]; do
+            if [ -n "$preview_id" ]; then
+              status_resp=$(
+                curl -s -w "\n%{http_code}" "https://api.render.com/v1/services/$RENDER_SERVICE_ID/preview/$preview_id" \
+                  -H "Authorization: Bearer $RENDER_API_KEY" \
+                  -H "Accept: application/json" \
+                  --max-time 60 \
+                  --retry 3 \
+                  --retry-delay 5
+              )
+              status_body=$(echo "$status_resp" | head -n -1)
+              status_code=$(echo "$status_resp" | tail -n 1)
+
+              if [ "$status_code" -ge 300 ]; then
+                status_resp=$(
+                  curl -s -w "\n%{http_code}" "https://api.render.com/v1/services/$RENDER_SERVICE_ID/preview" \
+                    -H "Authorization: Bearer $RENDER_API_KEY" \
+                    -H "Accept: application/json" \
+                    --max-time 60 \
+                    --retry 3 \
+                    --retry-delay 5
+                )
+                status_body=$(echo "$status_resp" | head -n -1)
+                status_code=$(echo "$status_resp" | tail -n 1)
+              fi
+            else
+              status_resp=$(
+                curl -s -w "\n%{http_code}" "https://api.render.com/v1/services/$RENDER_SERVICE_ID/preview" \
+                  -H "Authorization: Bearer $RENDER_API_KEY" \
+                  -H "Accept: application/json" \
+                  --max-time 60 \
+                  --retry 3 \
+                  --retry-delay 5
+              )
+              status_body=$(echo "$status_resp" | head -n -1)
+              status_code=$(echo "$status_resp" | tail -n 1)
+            fi
+
+            if [ "$status_code" -ge 300 ]; then
+              echo "::error::Preview status lookup failed ($status_code): $status_body"
+              exit 1
+            fi
+
+            preview_status=$(echo "$status_body" | jq -r '.status // .preview.status // .[0].status // empty')
+            preview_url=$(echo "$status_body" | jq -r '.url // .preview.url // .previewUrl // .service.previewUrl // .[0].url // .[0].previewUrl // empty')
+
+            if [ -z "$preview_status" ]; then
+              echo "::warning::Preview status missing in response: $status_body"
+            fi
+
+            echo "Attempt $attempts/$max_attempts: Status is '$preview_status'"
+
+            case "$preview_status" in
+              "live"|"active"|"ready")
+                if [ -n "$preview_url" ]; then
+                  echo "Preview URL: $preview_url"
+                  echo "Preview URL: $preview_url" >> "$GITHUB_STEP_SUMMARY"
+                else
+                  echo "::warning::Preview is live but URL missing in response."
+                fi
+                exit 0
+                ;;
+              "build_failed"|"update_failed"|"canceled"|"pre_deploy_failed"|"deactivated"|"failed")
+                echo "::error::Preview failed: $preview_status"
+                exit 1
+                ;;
+            esac
+
+            attempts=$((attempts + 1))
+            sleep "$sleep_seconds"
+          done
+
+          echo "::error::Preview deployment timed out"
+          exit 1
