--- a/.github/workflows/ci-medusa.yml
+++ b/.github/workflows/ci-medusa.yml
@@ -77,82 +77,43 @@ jobs:
 
   record-preview:
     name: Record preview metadata
-    if: github.event.pull_request.head.repo.full_name == github.repository
+    if: github.event.pull_request.head.repo.full_name == github.repository && always()
     needs: render-preview
     runs-on: ubuntu-latest
     permissions:
-      issues: write
+      actions: write
+      contents: read
     steps:
-      - name: Upsert preview comment
-        uses: actions/github-script@v7
+      - name: Write preview metadata
+        id: write-preview
         env:
           PREVIEW_URL: ${{ needs.render-preview.outputs.preview_url }}
           PREVIEW_SERVICE_ID: ${{ needs.render-preview.outputs.preview_service_id }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: |
+          set -euo pipefail
+
+          if [ -z "$PREVIEW_SERVICE_ID" ]; then
+            echo "No preview service id; skipping metadata upload."
+            echo "has_preview=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          jq -n \
+            --arg pr_number "$PR_NUMBER" \
+            --arg preview_service_id "$PREVIEW_SERVICE_ID" \
+            --arg preview_url "$PREVIEW_URL" \
+            '{
+              pr_number: ($pr_number | tonumber),
+              preview_service_id: $preview_service_id,
+              preview_url: $preview_url
+            }' > render-preview.json
+
+          echo "has_preview=true" >> "$GITHUB_OUTPUT"
+
+      - name: Upload preview metadata
+        if: steps.write-preview.outputs.has_preview == 'true'
+        uses: actions/upload-artifact@v4
         with:
-          script: |
-            const previewUrl = process.env.PREVIEW_URL;
-            const previewServiceId = process.env.PREVIEW_SERVICE_ID;
-
-            if (!previewServiceId) {
-              core.warning("Preview service id missing; skipping comment update.");
-              return;
-            }
-
-            const markerPrefix = "render-preview-service-id:";
-            const { owner, repo } = context.repo;
-            const issueNumber = context.payload.pull_request.number;
-
-            const { data: comments } = await github.rest.issues.listComments({
-              owner,
-              repo,
-              issue_number: issueNumber,
-              per_page: 100,
-            });
-
-            const existing = comments.find((comment) =>
-              comment.body && comment.body.includes(markerPrefix)
-            );
-
-            const extractIds = (body) => {
-              const ids = new Set();
-              if (!body) {
-                return ids;
-              }
-              for (const match of body.matchAll(/render-preview-service-id:([A-Za-z0-9-]+)/g)) {
-                ids.add(match[1]);
-              }
-              return ids;
-            };
-
-            const existingIds = existing ? extractIds(existing.body) : new Set();
-            existingIds.add(previewServiceId);
-
-            const markerLines = Array.from(existingIds).map(
-              (id) => `<!-- ${markerPrefix}${id} -->`
-            );
-            const bodyLines = [
-              "Render preview:",
-              "",
-              previewUrl ? `URL: ${previewUrl}` : "URL: pending",
-              "",
-              ...markerLines,
-            ];
-            const body = bodyLines.join("\n");
-
-            if (existing) {
-              await github.rest.issues.updateComment({
-                owner,
-                repo,
-                comment_id: existing.id,
-                body,
-              });
-              core.notice("Updated preview metadata comment.");
-            } else {
-              await github.rest.issues.createComment({
-                owner,
-                repo,
-                issue_number: issueNumber,
-                body,
-              });
-              core.notice("Created preview metadata comment.");
-            }
+          name: render-preview-metadata
+          path: render-preview.json
