--- a/.github/workflows/cleanup-render-preview.yaml
+++ b/.github/workflows/cleanup-render-preview.yaml
@@ -3,14 +3,6 @@ name: Cleanup Render Preview
 on:
   pull_request:
     types: [closed]
-    paths:
-      - "apps/medusa/**"
-      - "packages/**"
-      - "package.json"
-      - "pnpm-lock.yaml"
-      - "pnpm-workspace.yaml"
-      - "turbo.json"
-      - ".github/workflows/**"
 
 jobs:
   cleanup:
@@ -18,50 +10,97 @@ jobs:
     if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
     permissions:
-      issues: read
+      actions: read
+      contents: read
     steps:
-      - name: Locate preview service id
-        id: lookup
+      - name: Locate preview metadata artifacts
+        id: find-artifacts
         uses: actions/github-script@v7
         with:
           script: |
-            const markerPrefix = "render-preview-service-id:";
             const { owner, repo } = context.repo;
-            const issueNumber = context.payload.pull_request.number;
+            const prNumber = context.payload.pull_request.number;
+            const targetNames = new Set([
+              `render-preview-metadata-pr-${prNumber}`,
+              "render-preview-metadata",
+            ]);
 
-            const { data: comments } = await github.rest.issues.listComments({
+            const artifacts = await github.paginate(github.rest.actions.listArtifactsForRepo, {
               owner,
               repo,
-              issue_number: issueNumber,
               per_page: 100,
             });
 
-            const matchComment = comments.find((comment) =>
-              comment.body && comment.body.includes(markerPrefix)
+            const matches = artifacts.filter(
+              (artifact) => targetNames.has(artifact.name) && !artifact.expired
             );
 
-            if (!matchComment) {
-              core.notice("No preview metadata comment found; skipping cleanup.");
+            if (matches.length === 0) {
+              core.notice("No preview metadata artifacts found; skipping cleanup.");
               return;
             }
 
-            const matches = Array.from(
-              matchComment.body.matchAll(/render-preview-service-id:([A-Za-z0-9-]+)/g)
-            );
-            const ids = [...new Set(matches.map((match) => match[1]))];
+            core.setOutput("artifact_ids", matches.map((artifact) => artifact.id).join(","));
 
-            if (ids.length === 0) {
-              core.warning("Preview metadata comment missing service ids; skipping cleanup.");
-              return;
-            }
+      - name: Collect preview service ids
+        id: collect-ids
+        if: steps.find-artifacts.outputs.artifact_ids != ''
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ARTIFACT_IDS: ${{ steps.find-artifacts.outputs.artifact_ids }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: |
+          set -euo pipefail
 
-            core.setOutput("service_ids", ids.join(","));
+          ids_file="$RUNNER_TEMP/preview-service-ids.txt"
+          : > "$ids_file"
+
+          IFS=',' read -r -a artifact_ids <<< "$ARTIFACT_IDS"
+
+          for artifact_id in "${artifact_ids[@]}"; do
+            if [ -z "$artifact_id" ]; then
+              continue
+            fi
+
+            zip_path="$RUNNER_TEMP/render-preview-${artifact_id}.zip"
+            json_path="$RUNNER_TEMP/render-preview-${artifact_id}.json"
+
+            curl -sS -L \
+              -H "Authorization: Bearer $GITHUB_TOKEN" \
+              -H "Accept: application/vnd.github+json" \
+              -o "$zip_path" \
+              "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/artifacts/$artifact_id/zip"
+
+            if ! unzip -p "$zip_path" render-preview.json > "$json_path" 2>/dev/null; then
+              echo "::warning::Artifact $artifact_id missing render-preview.json; skipping."
+              continue
+            fi
+
+            metadata_pr_number=$(jq -r '.pr_number // empty' "$json_path")
+            if [ -n "$metadata_pr_number" ] && [ "$metadata_pr_number" != "$PR_NUMBER" ]; then
+              continue
+            fi
+
+            preview_service_id=$(jq -r '.preview_service_id // empty' "$json_path")
+            if [ -n "$preview_service_id" ]; then
+              echo "$preview_service_id" >> "$ids_file"
+            fi
+          done
+
+          if [ ! -s "$ids_file" ]; then
+            echo "No preview service ids found; skipping delete."
+            echo "service_ids=" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          sort -u "$ids_file" > "$RUNNER_TEMP/preview-service-ids-unique.txt"
+          echo "service_ids=$(paste -sd, "$RUNNER_TEMP/preview-service-ids-unique.txt")" >> "$GITHUB_OUTPUT"
 
       - name: Delete Render preview service
-        if: steps.lookup.outputs.service_ids != ''
+        if: steps.collect-ids.outputs.service_ids != ''
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          SERVICE_IDS: ${{ steps.lookup.outputs.service_ids }}
+          SERVICE_IDS: ${{ steps.collect-ids.outputs.service_ids }}
         run: |
           set -euo pipefail
 
