Revert "ci: use infisical in docker"
This reverts commit e5ab98f00e300e38af6f11c3ee5d50e781621b32.

--- a/apps/medusa/Dockerfile
+++ b/apps/medusa/Dockerfile
@@ -40,17 +40,14 @@ FROM base AS runner
 ENV NODE_ENV=production \
     PORT=9000
 
-RUN npm install -g @infisical/cli
-
 WORKDIR /app/apps/medusa/.medusa/server
 
 COPY --from=builder /app /app
 
-RUN chmod +x /app/apps/medusa/entrypoint.prod.sh
 RUN chown -R node:node /app
 
 USER node
 
 EXPOSE 9000
 
-CMD ["sh", "/app/apps/medusa/entrypoint.prod.sh"]
+CMD ["sh", "-c", "pnpm run predeploy && pnpm run start:prod"]
