--- a/apps/medusa/docker-compose.yml
+++ b/apps/medusa/docker-compose.yml
@@ -4,15 +4,16 @@ services:
       context: ../..
       dockerfile: apps/medusa/Dockerfile
       target: dev
-    env_file:
-      - .env.docker
     environment:
       NODE_ENV: development
+      INFISICAL_TOKEN: ${INFISICAL_TOKEN_MEDUSA:-}
+      INFISICAL_PROJECT_ID: ${INFISICAL_PROJECT_ID_MEDUSA:-}
+      INFISICAL_ENV: ${INFISICAL_ENV_MEDUSA:-}
     working_dir: /app/apps/medusa
     command: >
       sh -c "chmod +x ./start.sh && ./start.sh"
     ports:
-      - "9000:9000"
+      - '9000:9000'
     depends_on:
       postgres:
         condition: service_healthy
@@ -32,12 +33,12 @@ services:
       POSTGRES_USER: medusa_user
       POSTGRES_PASSWORD: medusa_password
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      test: ['CMD-SHELL', 'pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB']
       interval: 10s
       timeout: 5s
       retries: 5
     ports:
-      - "5433:5432"
+      - '5433:5432'
     volumes:
       - medusa_db_data:/var/lib/postgresql/data
 
@@ -47,7 +48,7 @@ services:
     image: redis:7-alpine
     restart: unless-stopped
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - medusa_redis_data:/data
 
